# hack-tools

./: .gitignore  Cargo.toml  justfile
hack-tools/: Cargo.toml
hack-tools/src/: asm.rs  jack.rs  jack_analyzer.rs  main.rs  vm.rs
tree-sitter-hack-asm/: Cargo.toml  binding.gyp  grammar.js  package.json
tree-sitter-hack-asm/bindings/node/: binding.cc  index.js
tree-sitter-hack-asm/bindings/rust/: lib.rs
tree-sitter-hack-asm/src/: grammar.json  node-types.json  parser.c
tree-sitter-hack-vm/: Cargo.toml  grammar.js  package.json
tree-sitter-hack-vm/bindings/node/: binding.cc
tree-sitter-hack-vm/src/: grammar.json  node-types.json  parser.c
tree-sitter-jack/: binding.gyp  grammar.js  package.json
tree-sitter-jack/bindings/node/: index.js
tree-sitter-jack/bindings/rust/: lib.rs
tree-sitter-jack/src/: grammar.json  node-types.json  parser.c
