[package]
name = "hack-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
html-escape = "0.2.13"
tree-sitter = "0.20.10"
tree-sitter-hack-asm = { path = "../tree-sitter-hack-asm" }
tree-sitter-hack-vm = { path = "../tree-sitter-hack-vm" }
tree-sitter-jack = { path = "../tree-sitter-jack" }
